--- a/index.css
+++ b/index.css
@@ -38,8 +38,13 @@
 .resto-logo {
   width: 100%;
 }
-.filter-btn {
+.filter{
+    display: flex;
+    margin: 20px;
+    justify-content: space-between;
 }
+/* .filter-btn {
+} */
 .shimmer-container {
   display: flex;
   flex-wrap: wrap;
