--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@
   border-bottom: 1px solid black;
   font-size: 20px;
   text-decoration: none;
-
 }
 .logo {
   width: "10px";
@@ -18,7 +17,7 @@
   display: flex;
   list-style-type: none;
 }
-a{
+a {
   text-decoration: none;
   color: black;
 }
@@ -45,10 +44,10 @@ a{
 .resto-logo {
   width: 100%;
 }
-.filter{
-    display: flex;
-    margin: 20px;
-    justify-content: space-between;
+.filter {
+  display: flex;
+  margin: 20px;
+  justify-content: space-between;
 }
 /* .filter-btn {
 } */
@@ -62,12 +61,16 @@ a{
   margin: 20px;
   background-color: #f0f0f0;
 }
-.login-btn{
-    padding-inline: 10px;
-    cursor: pointer;
+.login-btn {
+  padding-inline: 10px;
+  cursor: pointer;
 }
-.error{
+.error {
   align-items: center;
   text-align: center;
   justify-content: center;
+}
+.user-card {
+  padding: 10px;
+  border: 1px solid black;
 }
