--- a/index.css
+++ b/index.css
@@ -1,76 +1,4 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid black;
-  font-size: 20px;
-  text-decoration: none;
-}
-.logo {
-  width: "10px";
-  height: "10px";
-}
-.nav-items {
-  padding: 0px 20px;
-  font-size: 22px;
-}
-.nav-items ul {
-  display: flex;
-  list-style-type: none;
-}
-a {
-  text-decoration: none;
-  color: black;
-}
-.nav-items ul li {
-  padding: 8px;
-  margin: 10px;
-  text-decoration: none;
-}
-.resto-container {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 10px;
-}
-.restaurant-card {
-  width: 200px;
-  padding: 10px;
-  margin: 20px;
-  background-color: #f0f0f0;
-}
-.restaurant-card:hover {
-  border: 1px solid #969393;
-  cursor: pointer;
-}
-.resto-logo {
-  width: 100%;
-}
-.filter {
-  display: flex;
-  margin: 20px;
-  justify-content: space-between;
-}
-/* .filter-btn {
-} */
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-.shimmer {
-  width: 200px;
-  height: 400px;
-  margin: 20px;
-  background-color: #f0f0f0;
-}
-.login-btn {
-  padding-inline: 10px;
-  cursor: pointer;
-}
-.error {
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-}
-.user-card {
-  padding: 10px;
-  border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
